@@ -12030,8 +12030,18 @@ ${PROG} [a-z]*: Rebuilding administrative file database"
 	  ;;
 
         checkout_repository)
-          dotest_fail check_repository "${testcvs} co -d ${CVSROOT_DIRNAME} CVSROOT" \
+          dotest_fail check_repository-1 "${testcvs} co -d ${CVSROOT_DIRNAME} CVSROOT" \
 "${PROG} \[checkout aborted\]: Cannot check out files into the repository itself"
+	  cd ${CVSROOT_DIRNAME}
+          dotest_fail check_repository-2 "${testcvs} co CVSROOT" \
+"${PROG} \[checkout aborted\]: Cannot check out files into the repository itself"
+          dotest check_repository-3 "${testcvs} co -p CVSROOT/modules >/dev/null" \
+"===================================================================
+Checking out CVSROOT/modules
+RCS:  ${CVSROOT_DIRNAME}/CVSROOT/modules,v
+VERS: 1\.[0-9]*
+\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*"
+	  cd ${TESTDIR}
           ;;
 
 	mflag)
